GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/SalesforcePartnerTicketRedemption__x.object-meta.xml
<CustomObject>
    <description>SalesforcePartnerTicketRedemption</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforcePartnerTicketRedemption</externalName>
    <label>Non Eurostar ticket redemption</label>
    <pluralLabel>Non Eurostar ticket redemptions</pluralLabel>
</CustomObject>