GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <description>DestinationCode</description>
    <externalDeveloperName>DestinationCode</externalDeveloperName>
    <label>Destination code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>