GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/fields/InboundRewardId__c.field-meta.xml
<CustomField>
    <fullName>InboundRewardId__c</fullName>
    <externalDeveloperName>InboundRewardId</externalDeveloperName>
    <label>Inbound reward id</label>
    <length>18</length>
    <referenceTo>SalesforcePartnerTicketReward__x</referenceTo>
    <relationshipLabel>Non Eurostar ticket redemptions</relationshipLabel>
    <relationshipName>Non_Eurostar_ticket_redemptions1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>