GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/fields/OriginLocationGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>OriginLocationGroupDescription__c</fullName>
    <externalDeveloperName>OriginLocationGroupDescription</externalDeveloperName>
    <label>Origin location group description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>