GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/fields/OutboundRewardId__c.field-meta.xml
<CustomField>
    <fullName>OutboundRewardId__c</fullName>
    <externalDeveloperName>OutboundRewardId</externalDeveloperName>
    <label>Outbound reward id</label>
    <length>18</length>
    <referenceTo>SalesforcePartnerTicketReward__x</referenceTo>
    <relationshipLabel>Non Eurostar ticket redemptions</relationshipLabel>
    <relationshipName>Non_Eurostar_ticket_redemptions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>