GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/fields/OutboundTravelClassCode__c.field-meta.xml
<CustomField>
    <fullName>OutboundTravelClassCode__c</fullName>
    <externalDeveloperName>OutboundTravelClassCode</externalDeveloperName>
    <label>Outbound travel class code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>