GearsetPOC/force-app/main/default/objects/SalesforcePartnerTicketRedemption__x/fields/OutboundTravelClassDescription__c.field-meta.xml
<CustomField>
    <fullName>OutboundTravelClassDescription__c</fullName>
    <externalDeveloperName>OutboundTravelClassDescription</externalDeveloperName>
    <label>Outbound travel class description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>